--- a/child_pages/cc-elections/Candidates/albrecht.html
+++ b/child_pages/cc-elections/Candidates/albrecht.html
@@ -488,6 +488,36 @@
                     foundational services and systems that make economic development possible in the first place. </p> 
                 </details>
               </li>
+              <br>
+              <li>
+                <details> <summary style="color: blue;"><strong>Government Efficiency and Institutional Reform</strong></summary> 
+                  <p> Throughout his interviews, Commissioner Doug Albrecht has consistently returned to the idea that Cumberland County’s core problems—low 
+                    income per household, last-place health rankings, and sluggish infrastructure progress—stem in part from inefficiencies within local 
+                    government. He cites outdated systems, delayed projects, and unresolved labor contracts as symptoms of a government that had lost 
+                    momentum prior to his tenure. 
+                  </p> 
+                  <br>
+                  <p> During his time as Freeholder Director, Albrecht says he made it a priority to "unclog the pipes," finalizing 7 of 8 union contracts, 
+                    addressing long-overdue capital improvements, and bringing in project management support to improve follow-through on basic infrastructure 
+                    work. He believes these changes are necessary not only to fix obvious problems, but to regain public trust and demonstrate that the 
+                    county is capable of handling larger initiatives responsibly. 
+                  </p> 
+                  <br>
+                  <p> He also frames staff retention and institutional memory as key to government efficiency. Instead of cutting costs through austerity, 
+                    he supports offering fair wages and professional stability so that experienced public employees remain in their roles, reducing turnover 
+                    and training delays. 
+                  </p> 
+                  <br>
+                  <p> Albrecht has also highlighted examples of inter-agency cooperation—such as the Sheriff’s Office supporting local police departments 
+                    during coverage shortages and Bridgeton lending fire equipment to Millville—as models of how local government can operate more 
+                    efficiently when it works as a unified team. 
+                  </p> 
+                  <br>
+                  <p> While not presented under a formal "government reform" agenda, Albrecht's approach emphasizes internal capacity-building, reduced 
+                    bureaucratic drag, and improved coordination between departments and municipalities as core tools for restoring public confidence and 
+                    delivering results. </p> 
+                </details>
+              </li>
       </div>
 
 
@@ -587,9 +617,26 @@
               </li>
               <br>
               <li>
-                  <details>
-                      <summary style="color: blue;"><strong>Public Safety</strong></summary>
-                      <p>[Content coming soon]</p>
+                  <details> <summary style="color: blue;"><strong>Maurice River Library and Community Center Proposal</strong></summary> 
+                    <p> Albrecht has voiced support for expanding the county’s library system into underserved areas, particularly 
+                      Maurice River Township. He explains that during his tenure, the county had plans to build a satellite library in the township—not 
+                      just as a traditional library, but as a hybrid facility that would include restrooms and serve as a small tourism and community hub 
+                      near the coastal region. 
+                    </p> 
+                    <br>
+                    <p> Albrecht says the proposed facility would have helped address both practical and educational gaps. 
+                        The area lacks basic amenities for visitors, and nearby schools in Maurice River and Commercial Township reportedly have no school 
+                        libraries. In his view, this project would have been a way to improve literacy rates and educational access while also encouraging 
+                        civic engagement and small-scale economic development. He highlights that some local businesses had even begun purchasing or improving 
+                        property in anticipation of the project’s impact.
+                    </p> 
+                    <br>
+                    <p> While the plan had initial state support and a grant was awarded, Albrecht says the funding was unexpectedly pulled by the state a year 
+                      early—despite what he believes was a realistic path to completion. He attributes part of the delay to time-consuming environmental 
+                      reviews and other procedural hurdles but remains committed to revisiting the project when circumstances allow. He frames the library 
+                      not just as a place for books, but as a potential community anchor, similar to the fire halls and township buildings that already 
+                      serve as informal gathering spaces in rural parts of the county. 
+                    </p> 
                   </details>
               </li>
               <br>
