--- a/child_pages/cc-elections/Candidates/albrecht.html
+++ b/child_pages/cc-elections/Candidates/albrecht.html
@@ -639,25 +639,35 @@
                     </p> 
                   </details>
               </li>
+              
               <br>
               <li>
-                  <details>
-                      <summary style="color: blue;"><strong>Government Efficiency</strong></summary>
-                      <p>[Content coming soon]</p>
-                  </details>
-              </li>
-              <br>
-              <li>
-                  <details>
-                      <summary style="color: blue;"><strong>Social Services / Public Health</strong></summary>
-                      <p>[Content coming soon]</p>
-                  </details>
-              </li>
-              <br>
-              <li>
-                  <details>
-                      <summary style="color: blue;"><strong>Party Affiliation and Ideology</strong></summary>
-                      <p>[Content coming soon]</p>
+                  <details> <summary style="color: blue;"><strong>Nabb Avenue Extension</strong></summary> 
+                    <p> Albrecht has prioritized the Nabb Avenue Extension project as one of the most important long-term economic 
+                      development efforts in Cumberland County. The goal is to create a direct connection between Route 55 and Route 49, unlocking access 
+                      to the Millville Airport, industrial sites, farmland, and recreational areas on the western side of the Maurice River. 
+                    </p> 
+                    <br>
+                    <p> Albrecht says the project was originally proposed in a 2012 Millville planning report but languished until he revived it during his 
+                      time as Freeholder Director. He worked with the City of Millville and a key private landowner to design a route through a single 
+                      property, choosing negotiation over eminent domain. The property owner ultimately agreed, aided by infrastructure incentives like 
+                      erosion control, water flow improvements, and an overpass to maintain farm access. 
+                    </p> 
+                    <br>
+                    <p> The proposed road includes a roundabout and would help facilitate increased industrial and recreational traffic throughout Millville, 
+                      Fairfield Township, Commercial Township, and Port Elizabeth. Albrecht agreed with the description "a cornucopia of economic potential,” 
+                      citing increased property values, job growth, and business expansion as expected outcomes. 
+                    </p> 
+                    <br>
+                    <p> He also notes that the City of Millville has supported the project by investing in its industrial park and securing a PILOT 
+                      agreement (Payment in Lieu of Taxes) to attract new business, with additional expansion phases contingent on the road’s completion. 
+                    </p> 
+                    <br>
+                    <p> While the engineering and planning phases are complete, the project is currently stalled due to the loss of federal earmarks that 
+                      had been proposed in both the House and Senate. Albrecht says these were pulled during budget reconciliation processes, setting the 
+                      county back temporarily. However, he maintains that the county is committed to the project and will continue to push for completion as 
+                      funds become available. 
+                    </p> 
                   </details>
               </li>
           </ul>
@@ -665,33 +675,57 @@
 
       <br><br>
 
-      
-
-      <br>
-
-      <h4 class="sub-heading">Experience</h4>
-      <div class="experience can-sec">
-          <h4>Organizations</h4>
-          <ul>
-              <li>
-                  <details>
-                      <summary style="color: blue;">[Organization Name]</summary>
-                      [Description coming soon]
-                  </details>
-              </li>
-          </ul>
-
-          <br><br>
-
-          <h4>Professional and Work Background</h4>
-          <ul>
-              <li>
-                  <details>
-                      <summary style="color: blue;">[Position or Role]</summary>
-                      [Description coming soon]
-                  </details>
-              </li>
-          </ul>
+      <h4 class="sub-heading">Background and Experience</h4> 
+      <div class="experience can-sec"> 
+        <ul> 
+          <li> 
+            <details> <summary style="color: blue;"><strong>Professional and Educational Background</strong></summary> 
+            <p> Doug Albrecht is the President and manager of Bob Albrecht Tire & Service, a family-owned business in Vineland, NJ. He holds a B.A. in 
+              Political Science and Economics from the University of Maryland and an M.B.A. from Rowan University. He grew up in Vineland and graduated 
+              from Vineland High School in 1982. 
+            </p> 
+            <br>
+            </details> 
+          </li> 
+          <br>
+          <li> 
+            <details> <summary style="color: blue;"><strong>Experience in Government</strong></summary> 
+              <p> Albrecht served on Vineland City Council from 2008 to 2012, where he acted as liaison to the Municipal Electric Utility, Planning Board, 
+                and Urban Enterprise Zone. He also served as Director of the Vineland Downtown Improvement District and has participated in various volunteer
+                roles across Cumberland County. 
+              </p> 
+              <br>
+              <p> He was first elected to the Cumberland County Board of Commissioners in 2017 and is currently seeking his third term. In his role as 
+                Commissioner, Albrecht has emphasized fiscal conservatism, oversight of county operations, and solution-focused approaches to core challenges 
+                in health, literacy, and income levels. 
+              </p> 
+            </details> 
+          </li> 
+          <br>
+          <li> <details> <summary style="color: blue;"><strong>Current Liaison Roles and Committees</strong></summary> 
+            <p> Doug Albrecht currently serves as: 
+              <ul>
+                <li>Member of the County Finance Committee</li> 
+                <li>Liaison to the Cumberland County Library Board</li> 
+                <li>Liaison to the Cumberland County Board of Elections</li> 
+                <li>Member of the Bayshore Council</li> 
+                <li>Member of the Cumberland County Tourism Council</li> 
+                <li>Member of the Recreation Committee</li> 
+              </ul> 
+            </p> 
+            <p> As liaison to the Library Board, Albrecht oversaw the most extensive renovation of the Cumberland County Library in nearly 40 years. 
+              As liaison to the Board of Elections, he has publicly raised concerns about the state shifting implementation costs of election law changes 
+              onto county taxpayers. In his role on the Recreation Committee, he has supported plans to create a formal county parks system, centered around 
+              redeveloping the County Fairgrounds into a 170-acre recreational hub. 
+            </p> </details> 
+          </li>
+          <br>
+          <li> <details> <summary style="color: blue;"><strong>Community Ties</strong></summary> 
+            <p> Albrecht is a member of Saint Anthony's Greek Orthodox Church and lives in Vineland with his wife, Sophia, and their son, Samuel. He 
+              continues to advocate for policies that balance economic growth with preserving the cultural and environmental assets of Cumberland County. 
+            </p> </details> 
+          </li> 
+        </ul> 
       </div>
    
     </div>
