--- a/child_pages/cc-elections/Candidates/albrecht.html
+++ b/child_pages/cc-elections/Candidates/albrecht.html
@@ -274,6 +274,8 @@
      <br>
      <br>
 
+     <details>
+        <summary style="font-size: 2em; cursor:pointer; color:blue; text-decoration:underline;">Videos</summary>
      <div class="video-box-modal can-sec">
         <h3 class="video-heading">2025 InformTheVoteNJ Interview With Douglas Albrecht</h3>
 
@@ -326,7 +328,8 @@
                   <tr>
                     <td>0:00</td>
                     <td>Intro & InformTheVoteNJ.com</td>
-                    <td>Albrecht introduces the show and Steven Solof. Steven explains how InformTheVoteNJ.com began and why it's important to create an accessible hub for campaign information.</td>
+                    <td>Albrecht introduces the show and Steven Solof. Steven explains how InformTheVoteNJ.com began and why it's important to create an 
+                      accessible hub for campaign information.</td>
                   </tr>
                   <tr>
                     <td>11:45</td>
@@ -377,6 +380,99 @@
     <br>
     <br>
 
+    <div class="video-box-modal can-sec">
+      <h3 class="video-heading">2025 InformTheVoteNJ Interview With Douglas Albrecht (Part 2)</h3>
+
+      <iframe src="https://www.youtube.com/embed/md0yLU4qzNo?si=bBtKeQwzeJc-mIjj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>    
+
+      <br>
+      <br>
+
+      <details>
+          <summary style="text-align: center; font-weight: bold; font-size: 1.1em; cursor: pointer;">📋 Click here for full interview summary 📋</summary>
+          <br>
+          <br>
+          <div style="padding: 15px 25px; text-align: left;">
+              <p>In this one-hour WVLT radio interview, I sat down with Cumberland County Commissioner Doug Albrecht, who is running for re-election in 2025. We unpacked everything from the future of the county jail and the controversial “concrete slab” to broadband expansion, library renovations, and navigating state red tape.</p>
+
+              <p>Doug was candid throughout — even apologizing multiple times for not being able to cover everything — which underscores a larger point: these conversations take time. Each bullet point on a campaign site represents a whole story about priorities, constraints, and trade-offs.</p>
+
+              <p>If you’re a Cumberland County voter trying to “do your homework,” this is the kind of long-form discussion that brings slogans to life — and helps you decide whether you agree with the leadership direction or want to see a change.</p>
+          </div>
+      </details>
+
+      <br>
+      <br>
+
+      <details>
+          <summary style="text-align: center; font-weight: bold; font-size: 1.1em; cursor: pointer;">⏳ Click to view timestamps, topics, and takeaways ⏳</summary>
+          <div class="video-summary" style="margin-top: 1em;">
+              <h2>Interview Summary – Douglas Albrecht (Part 2)</h2>
+              <p>This table highlights the key topics covered in the interview, summarizing major takeaways per section.</p>
+              <table border="1" cellpadding="8" cellspacing="0" style="width: 100%; border-collapse: collapse;">
+                  <thead>
+                      <tr>
+                          <th style="text-align: left;">Timestamp</th>
+                          <th style="text-align: left;">Topic</th>
+                          <th style="text-align: left;">Key Takeaways</th>
+                      </tr>
+                  </thead>
+                  <tbody>
+                      <tr>
+                          <td>0:00–2:45</td>
+                          <td>Origins of InformTheVoteNJ</td>
+                          <td>Why the project began; Albrecht praises transparency efforts and shares how township meetings often shape his understanding of public needs.</td>
+                      </tr>
+                      <tr>
+                          <td>10:00–15:00</td>
+                          <td>Shared Services & Problem Solving</td>
+                          <td>Example of county coordination on storm drain maintenance that saved local townships money.</td>
+                      </tr>
+                      <tr>
+                          <td>15:00–23:00</td>
+                          <td>Zoning & State Red Tape</td>
+                          <td>Explains delays with the DEP and planning board constraints. Highlights South Ave Culvert red tape and potential reforms from Jack Ciattarelli.</td>
+                      </tr>
+                      <tr>
+                          <td>23:00–27:00</td>
+                          <td>Bald Eagles & Overregulation</td>
+                          <td>Illustrates how habitat protection rules (e.g. 600ft buffer for eagle nests) sometimes paralyze local development efforts.</td>
+                      </tr>
+                      <tr>
+                          <td>24:45–27:30</td>
+                          <td>Term Limits & Bureaucracy</td>
+                          <td>Albrecht argues against term limits, comparing elected terms to short-track careers versus long-entrenched bureaucrats.</td>
+                      </tr>
+                      <tr>
+                          <td>27:30–38:00</td>
+                          <td>Library Renovations & Literacy</td>
+                          <td>Details on a major renovation effort: modernized children’s area, new tech, expanded programming, and a proposed adjacent “Jake Park.”</td>
+                      </tr>
+                      <tr>
+                          <td>38:00–51:00</td>
+                          <td>County Jail Overhaul</td>
+                          <td>Breakdown of the failed Salem plan and current Camden deal. Clarifies fate of the $16M slab and $60M in bonds. Camden seen as best available option.</td>
+                      </tr>
+                      <tr>
+                          <td>51:00–55:30</td>
+                          <td>Middle Mile Broadband Project</td>
+                          <td>Defends transferring control to Salem County. Pushes back on exaggerated cost claims and highlights revenue potential.</td>
+                      </tr>
+                      <tr>
+                          <td>55:30–End</td>
+                          <td>Unfinished Business & Final Thoughts</td>
+                          <td>Apologizes for not covering more. Reinforces how much complexity exists behind each campaign promise.</td>
+                      </tr>
+                  </tbody>
+              </table>
+          </div>
+      </details>
+  </div>
+  </details>
+
+  <br>
+  <br>
+
      <div class="gauge-box">
         <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Above Average</h4>
         <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Transparency Standards Explained</button></a>                 
@@ -390,6 +486,84 @@
     
      <details>
         <summary style="font-size: 2em; cursor:pointer; color:blue; text-decoration:underline;">Events</summary>
+
+        <div class="event-card">
+                <ul class="event-info">
+                    <li class="name"><strong>Bi-Weekly Republican Breakfast</strong></li>
+                    <li class="description">If you're a Republican, get updates on politics from the local to national level, meet candidates and party members 
+                      , and have breakfast. $20 entry to pay for breakfast, it is not a party donation.
+                    </li>
+                    <li class="date-and-time">8/9/25</li>
+                    <li class="location">Greenview Inn at Eastlyn Golf Course, 4149 Italia Drive, Vineland, NJ 08361</li>
+                </ul>
+            </div>   
+
+        <div class="event-card">
+                <ul class="event-info">
+                    <li class="name"><strong>Bi-Weekly Republican Breakfast</strong></li>
+                    <li class="description">If you're a Republican, get updates on politics from the local to national level, meet candidates and party members 
+                      , and have breakfast. $20 entry to pay for breakfast, it is not a party donation.
+                    </li>
+                    <li class="date-and-time">8/23/25</li>
+                    <li class="location">Greenview Inn at Eastlyn Golf Course, 4149 Italia Drive, Vineland, NJ 08361</li>
+                </ul>
+            </div>   
+
+            <div class="event-card">
+                <ul class="event-info">
+                    <li class="name"><strong>Bi-Weekly Republican Breakfast</strong></li>
+                    <li class="description">If you're a Republican, get updates on politics from the local to national level, meet candidates and party members 
+                      , and have breakfast. $20 entry to pay for breakfast, it is not a party donation.
+                    </li>
+                    <li class="date-and-time">9/6/25</li>
+                    <li class="location">Greenview Inn at Eastlyn Golf Course, 4149 Italia Drive, Vineland, NJ 08361</li>
+                </ul>
+            </div>   
+
+            <div class="event-card">
+                <ul class="event-info">
+                    <li class="name"><strong>Bi-Weekly Republican Breakfast</strong></li>
+                    <li class="description">If you're a Republican, get updates on politics from the local to national level, meet candidates and party members 
+                      , and have breakfast. $20 entry to pay for breakfast, it is not a party donation.
+                    </li>
+                    <li class="date-and-time">9/20/25</li>
+                    <li class="location">Greenview Inn at Eastlyn Golf Course, 4149 Italia Drive, Vineland, NJ 08361</li>
+                </ul>
+            </div>   
+
+            <div class="event-card">
+                <ul class="event-info">
+                    <li class="name"><strong>Bi-Weekly Republican Breakfast</strong></li>
+                    <li class="description">If you're a Republican, get updates on politics from the local to national level, meet candidates and party members 
+                      , and have breakfast. $20 entry to pay for breakfast, it is not a party donation.
+                    </li>
+                    <li class="date-and-time">10/4/25</li>
+                    <li class="location">Mauricetown Fire Hall, 9544 Noble Street in Mauricetown, New Jersey 08329.</li>
+                </ul>
+            </div>   
+
+            <div class="event-card">
+                <ul class="event-info">
+                    <li class="name"><strong>Bi-Weekly Republican Breakfast</strong></li>
+                    <li class="description">If you're a Republican, get updates on politics from the local to national level, meet candidates and party members 
+                      , and have breakfast. $20 entry to pay for breakfast, it is not a party donation.
+                    </li>
+                    <li class="date-and-time">10/18/25</li>
+                    <li class="location">Greenview Inn at Eastlyn Golf Course, 4149 Italia Drive, Vineland, NJ 08361</li>
+                </ul>
+            </div>   
+
+            <div class="event-card">
+                <ul class="event-info">
+                    <li class="name"><strong>Bi-Weekly Republican Breakfast</strong></li>
+                    <li class="description">If you're a Republican, get updates on politics from the local to national level, meet candidates and party members 
+                      , and have breakfast. $20 entry to pay for breakfast, it is not a party donation.
+                    </li>
+                    <li class="date-and-time">11/1/25</li>
+                    <li class="location">Mauricetown Fire Hall, 9544 Noble Street in Mauricetown, New Jersey 08329.</li>
+                </ul>
+            </div>   
+
 
     </details>
             
@@ -705,14 +879,21 @@
           <li> <details> <summary style="color: blue;"><strong>Current Liaison Roles and Committees</strong></summary> 
             <p> Doug Albrecht currently serves as: 
               <ul>
+                <br>
                 <li>Member of the County Finance Committee</li> 
+                <br>
                 <li>Liaison to the Cumberland County Library Board</li> 
+                <br>
                 <li>Liaison to the Cumberland County Board of Elections</li> 
+                <br>
                 <li>Member of the Bayshore Council</li> 
+                <br>
                 <li>Member of the Cumberland County Tourism Council</li> 
+                <br>
                 <li>Member of the Recreation Committee</li> 
               </ul> 
             </p> 
+            <br>
             <p> As liaison to the Library Board, Albrecht oversaw the most extensive renovation of the Cumberland County Library in nearly 40 years. 
               As liaison to the Board of Elections, he has publicly raised concerns about the state shifting implementation costs of election law changes 
               onto county taxpayers. In his role on the Recreation Committee, he has supported plans to create a formal county parks system, centered around 
