--- a/index.html
+++ b/index.html
@@ -86,10 +86,12 @@
                             <input type="checkbox" name="accordion" id="second">
                             <label for="second">School Board Elections</label>
                             <div class="nested-burger-links">
-                                <!-- <li class="link"><a href="child_pages/cc-elections/bridgeton_school_board_2024.html">Bridgeton School Board</a></li>
+                                <li class="link"><a href="child_pages/cc-elections/bridgeton_school_board_2024.html">Bridgeton School Board</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/commercial_school_board_2024.html">Commercial Township School Board</a></li>
-                                <li class="link"><a href="child_pages/cc-elections/fairfield_school_board_2024.html">Fairfield Township School Board</a></li>
-                                <li class="link"><a href="child_pages/cc-elections/lawrence_school_board_2024.html">Lawrence Township School Board</a></li> -->
+                                <li class="link"><a href="child_pages/cc-elections/hopewell-shiloh_school_board.html">Hopewell-Shiloh School Board</a></li>
+                                
+                                <!-- <li class="link"><a href="child_pages/cc-elections/fairfield_school_board_2024.html">Fairfield Township School Board</a></li> -->
+                                <li class="link"><a href="child_pages/cc-elections/lawrence_school_board_2024.html">Lawrence Township School Board</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/vsb_2024.html">Vineland School Board</a></li>
                             </div>
                         </div>
