--- a/child_pages/cc-elections/hopewell_school_board.html
+++ b/child_pages/cc-elections/hopewell_school_board.html
@@ -209,7 +209,7 @@
                 <img src="../../../assets/screenshots/ballots/vinelandBallot.png" alt="Screenshot Thumbnail" id="screenshotThumbnail" style="cursor:pointer; width:100%; max-width: 80vw; margin-top: 10px;">
             </details> -->
             <p class="instructions school-board-instructions">( Click or tap on candidate name to learn more about them )</p>
-            <h3>VINELAND SCHOOL BOARD</h3>
+            <h3>Hopewell-Shiloh SCHOOL BOARD</h3>
             
             
         </div>
