--- a/child_pages/cc-elections/vsb_2024.html
+++ b/child_pages/cc-elections/vsb_2024.html
@@ -366,7 +366,7 @@
                                   </div>
                                   <div class="a-row-2">
                                       <div class="last-name push-down-last-name">
-                                          <a href="Candidates/amberths.html">Amberths.</a>
+                                          <a href="Candidates/amberths.html">Amberths</a>
                                       </div>
                                   </div>
               
