--- a/index.html
+++ b/index.html
@@ -326,6 +326,11 @@
                         <!-- <a href="child_pages/cc-elections/commercial_township_committee.html">Commercial Township Committee</a>
                         <a href="child_pages/cc-elections/downe_township_committee.html">Downe Township Committee</a>
                         <a href="child_pages/cc-elections/lawrence_township_committee_2024.html">Lawrence Township Committee</a> -->
+                        <a href="child_pages/cc-elections/bridgeton_school_board_2024.html">Bridgeton School Board</a>
+                        <a href="child_pages/cc-elections/commercial_school_board_2024.html">Commercial Township School Board</a>
+                        <a href="child_pages/cc-elections/hopewell-shiloh_school_board.html">Hopewell-Shiloh School Board</a>
+                        <a href="child_pages/cc-elections/lawrence_school_board_2024.html">Lawrence Township School Board</a>
+
                         <a href="child_pages/cc-elections/vsb_2024.html">Vineland School Board</a>
 
                         <a href="child_pages/cc-elections/state_assembly_legislative_district_1.html">State Assembly - 1st Legislative District</a>
