--- a/child_pages/cc-elections/bridgeton_school_board_2024.html
+++ b/child_pages/cc-elections/bridgeton_school_board_2024.html
@@ -127,7 +127,7 @@
         <div class="modal-content">
           <img src="../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
           <h4 class="quick-sum">quick summary button</h4>
-          <h6 class="page-title">County Commissioner</h6>
+          <h6 class="page-title">Bridgeton School Board</h6>
           <p>
           </p>
         </div>
