--- a/child_pages/cc-elections/lawrence_school_board_2024.html
+++ b/child_pages/cc-elections/lawrence_school_board_2024.html
@@ -106,8 +106,8 @@
           <img src="../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
           <h4 class="quick-sum">quick summary button</h4>
           <h6 class="page-title">County Commissioner</h6>
-          <p>This year 2 seats are open on the Lawrence School Board. After scouring the internet and contacting the County Clerk's office via OPRA requests, we still, as of 
-            today 9/8/2024, have no pertinent information regarding this election. Click the red x at the top of this box and then scroll down down for more in-depth information.
+          <p>
+            Click the red x at the top of this box and then scroll down down for more in-depth information.
           </p>
         </div>
       
@@ -173,7 +173,7 @@
         <button class="quick-summary-reopen">quick election summary</button>
         
         <div class="sb-top-box"> 
-            <h3>ELECTION DATE: November 7th, 2023</h3>
+            <h3>ELECTION DATE: November 4th, 2025</h3>
             <h2>SAMPLE BALLOT</h2>
             <p class="instructions school-board-instructions">( Click or tap on candidate name to learn more about them )</p>
             <h3>LAWRENCE TOWNSHIP SCHOOL BOARD</h3>
