3 candidates added to millville and burgers for races updated

--- a/child_pages/cc-elections/millville_commissioners_2024.html
+++ b/child_pages/cc-elections/millville_commissioners_2024.html
@@ -59,10 +59,12 @@
                             <input type="checkbox" name="accordion" id="second">
                             <label for="second">School Board Elections</label>
                             <div class="nested-burger-links">
-                                <!-- <li class="link"><a href="../cc-elections/bridgeton_school_board_2024.html">Bridgeton School Board</a></li>
+                                <li class="link"><a href="../cc-elections/bridgeton_school_board_2024.html">Bridgeton School Board</a></li>
                                 <li class="link"><a href="../cc-elections/commercial_school_board_2024.html">Commercial Township School Board</a></li>
-                                <li class="link"><a href="../cc-elections/fairfield_school_board_2024.html">Fairfield Township School Board</a></li>
-                                <li class="link"><a href="../cc-elections/lawrence_school_board_2024.html">Lawrence Township School Board</a></li> -->
+                                <!-- <li class="link"><a href="../cc-elections/fairfield_school_board_2024.html">Fairfield Township School Board</a></li> -->
+                                <li class="link"><a href="../cc-elections/hopewell-shiloh_school_board.html">Hopewell-Shiloh School Board</a></li>
+
+                                <li class="link"><a href="../cc-elections/lawrence_township_school_board.html">Lawrence Township School Board</a></li>
                                 <li class="link"><a href="../cc-elections/vsb_2024.html">Vineland School Board</a></li>
                             </div>
                         </div>
@@ -816,6 +818,51 @@
                     </div>
                 </div> <!-- end of individual candidate -->
 
+                <div class="row" id="only-three">
+                    <div class="office-title">
+                        <div class="ot-english">
+                            <p>Millville City Commissioners</p>
+                            <p>Vote for Five</p>
+                        </div>
+                        <div class="ot-espanol">
+                            <p>Junta Comisionados del Empleados</p>
+                            <p>Vota por Cinco</p>
+                        </div>
+                    </div>
+                    <div class="a">
+                        <div class="a-row-1">
+                            <div class="org">
+                                <p>Independent</p> 
+                            </div>
+                            <div class="first-name">
+                                <a href="Candidates/sooy.html">Joe</a>
+                            </div>
+                            <div class="number-a-and-circle"> 
+                                <p>1J</p>
+                                <p>0</p>
+                            </div>   
+                        </div>
+                        <div class="a-row-2">
+                            <div class="last-name push-down-last-name">
+                                <a href="Candidates/sooy.html">Sooy</a>
+                            </div>
+                        </div>
+                        <div class="a-row-3">
+                            <div class="slogan">
+                                <p></p>
+                            </div>
+                        </div>
+    
+                    </div>
+                    <div class="personal-choice-millville">
+                        <div class='pc-col-1'>
+                            <p class="pc-line-1">Personal Choice</p>
+                            <p class="pc-line-2">Seleccion Personal</p>
+                        </div>
+                        <div class="pc-col-2">0</div>
+                    </div>
+                </div> <!-- end of individual candidate -->
+
         </div><!-- end of independent candidates -->
 
         
@@ -869,6 +916,51 @@
                         <div class="a-row-2">
                             <div class="last-name push-down-last-name">
                                 <a href="Candidates/mcquade.html">Mcquade</a>
+                            </div>
+                        </div>
+                        <div class="a-row-3">
+                            <div class="slogan">
+                                <p>The People's Commissioner</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="personal-choice-millville">
+                        <div class='pc-col-1'>
+                            <p class="pc-line-1">Personal Choice</p>
+                            <p class="pc-line-2">Seleccion Personal</p>
+                        </div>
+                        <div class="pc-col-2">0</div>
+                    </div>
+                </div>
+
+
+                <div class="row" id="only-three">
+                    <div class="office-title">
+                        <div class="ot-english">
+                            <p>Millville City Commissioners</p>
+                            <p>Vote for Five</p>
+                        </div>
+                        <div class="ot-espanol">
+                            <p>Junta Comisionados del Empleados</p>
+                            <p>Vota por Cinco</p>
+                        </div>
+                    </div>
+                    <div class="a">
+                        <div class="a-row-1">
+                            <div class="org">
+                                <p>Republican</p> 
+                            </div>
+                            <div class="first-name">
+                                <a href="Candidates/romanik.html">Benjamin</a>
+                            </div>
+                            <div class="number-a-and-circle"> 
+                                <p>3J</p>
+                                <p>0</p>
+                            </div>   
+                        </div>
+                        <div class="a-row-2">
+                            <div class="last-name push-down-last-name">
+                                <a href="Candidates/romanik.html">Romanik</a>
                             </div>
                         </div>
                         <div class="a-row-3">
