--- a/child_pages/cc-elections/state_assembly_legislative_district_1_issues.html
+++ b/child_pages/cc-elections/state_assembly_legislative_district_1_issues.html
@@ -57,10 +57,12 @@
                             <input type="checkbox" name="accordion" id="second">
                             <label for="second">School Board Elections</label>
                             <div class="nested-burger-links">
-                                <!-- <li class="link"><a href="../cc-elections/bridgeton_school_board_2024.html">Bridgeton School Board</a></li>
+                                <li class="link"><a href="../cc-elections/bridgeton_school_board_2024.html">Bridgeton School Board</a></li>
                                 <li class="link"><a href="../cc-elections/commercial_school_board_2024.html">Commercial Township School Board</a></li>
-                                <li class="link"><a href="../cc-elections/fairfield_school_board_2024.html">Fairfield Township School Board</a></li>
-                                <li class="link"><a href="../cc-elections/lawrence_school_board_2024.html">Lawrence Township School Board</a></li> -->
+                                <!-- <li class="link"><a href="../cc-elections/fairfield_school_board_2024.html">Fairfield Township School Board</a></li> -->
+                                <li class="link"><a href="../cc-elections/hopewell-shiloh_school_board.html">Hopewell-Shiloh School Board</a></li>
+
+                                <li class="link"><a href="../cc-elections/lawrence_township_school_board.html">Lawrence Township School Board</a></li>
                                 <li class="link"><a href="../cc-elections/vsb_2024.html">Vineland School Board</a></li>
                             </div>
                         </div>
